--- a/aula-node-express/index.html
+++ b/aula-node-express/index.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+  <head>
     <title>Aula Node</title>
 
     <script>
-        function enviar() {
-            let id = document.getElementById('reg').value
-            console.log("Meu id: ", id)
-            fetch("http://localhost:3001/" + id)
-                .then(resp => resp.text())
-                .then(texto => atualizarInterface(texto))
-        }
+      function enviar() {
+        let id = document.getElementById('reg').value
+        console.log('Meu id: ', id)
+        fetch('http://localhost:3001/' + id)
+          .then(resp => resp.text())
+          .then(texto => atualizarInterface(texto))
+      }
 
-        function atualizarInterface(texto) {
-            document.getElementById('msg').innerHTML = texto
-            console.log(texto)
-        }
+      function atualizarInterface(texto) {
+        document.getElementById('msg').innerHTML = texto
+        console.log(texto)
+      }
     </script>
-</head>
+  </head>
 
-<body style="background-color: gray;">
+  <body style="background-color: gray">
     <h1 id="msg">Um texto qualquer aqui!!</h1>
 
-    <input type="text" id="reg">
+    <input type="text" id="reg" />
     <button onclick="enviar()">Enviar</button>
-</body>
+  </body>
 </html>
-
 
 <!-- 
     Deu erro de CORS policy, é um erro de permissão
